Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39403

QDesktopWidget::availableGeometry() returns wrong values in Mac fullscreen mode

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.11.0
    • 5.3.0
    • QPA
    • None
    • macOS
    • 6121c400181419a4a2a0faf842efdde8b59f87a5

    Description

      When a Mac application is put in full screen mode, the Dock and menu bar are automatically hidden. However, the value returned from QDesktopWidget::availableGeometry() still accounts for this space, thus returning an incorrect value.

      One manifestation of this issue is that context menus are positioned incorrectly if the right-click occurs in the region the Dock used to occupy. To repro:

      • Position the Dock at the bottom of the screen, unhidden.
      • Build the attached sample, and run it.
      • Click the "dual-arrow" icon in the top-right of the title bar to put the application in full-screen.
      • Right-click in the region of the screen the Dock occupied before switching to full-screen.

      The context menu will be positioned above the former Dock location.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            bmedina Ben Medina
            Votes:
            2 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes